--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "bob2",
   "version": "1.0.0",
   "description": "BBC Online Board",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js --experimental-json-modules"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,7 @@
   "homepage": "https://github.com/wbriese/bob2#readme",
   "dependencies": {
     "angles": "^0.2.4",
+    "chart.js": "^2.9.4",
     "dotenv": "^8.2.0",
     "fs": "0.0.1-security",
     "handlebars": "^4.7.6",
@@ -29,5 +31,10 @@
     "koa-router": "^10.0.0",
     "koa-static": "^5.0.0",
     "node-fetch": "^2.6.1"
+  },
+  "devDependencies": {
+    "eslint": "^7.18.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1"
   }
 }
