--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/wbriese/bob2#readme",
   "dependencies": {
     "angles": "^0.2.4",
+    "brain.js": "^2.0.0-beta.2",
     "chart.js": "^2.9.4",
     "dotenv": "^8.2.0",
     "fs": "0.0.1-security",
@@ -30,7 +31,8 @@
     "koa": "^2.13.0",
     "koa-router": "^10.0.0",
     "koa-static": "^5.0.0",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "polynomial.js": "^2.0.1"
   },
   "devDependencies": {
     "eslint": "^7.18.0",
