--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "koa": "^2.13.0",
     "koa-router": "^10.0.0",
     "koa-static": "^5.0.0",
+    "lodash": "^4.17.20",
     "node-fetch": "^2.6.1",
     "polynomial.js": "^2.0.1"
   },
