--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "koa-static": "^5.0.0",
     "lodash": "^4.17.20",
     "node-fetch": "^2.6.1",
-    "polynomial.js": "^2.0.1"
+    "regression": "^2.0.1"
   },
   "devDependencies": {
     "eslint": "^7.18.0",
